lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/burl_normalize/burl_normalize9/burl_normalize9.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/burl_normalize/burl_normalize9/burl_normalize9.c:22:20: error: use of undeclared identifier 's__b'
    burl_normalize(s__b ,s__t ,b_flags );
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
